# unification-sop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.org  default.nix  genericPrologTermUniqueType.hs  optimised.hs  shell.nix  unification-sop.cabal
docs/: Generic-Unification-Hinze.html  Generic-Unification-Substitution.html  Generic-Unification-Term.html  Generic-Unification-Tutorial.html  Generic-Unification-Unification.html  doc-index.html  index.html
src/Generic/Unification/: Hinze.hs  Prolog.hs  Substitution.hs  Term.hs  Tutorial.hs  Unification.hs
src/Generic/Unification/Term/: Internal.hs
