cabal-version:       2.4
name:                unification-sop
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Carlo Nucera
maintainer:          meditans@gmail.com
-- copyright:
category:            Generics, Unification
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Generic.Unification.Term
                 , Generic.Unification.Substitution
                 , Generic.Unification.Unification
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , pretty-show
                     , generics-sop
                     , show-combinators
                     , typerep-map
                     , mtl
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010

 -- first-class-families
 -- (pkgs.haskell.lib.dontCheck (pkgs.haskellPackages.callPackage ~/code/haskell/forks/typerep-map {})))
