cabal-version:       2.4
name:                unification-sop
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Carlo Nucera
maintainer:          meditans@gmail.com
-- copyright:
category:            Generics, Unification
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Generic.Unification.Term
                 , Generic.Unification.Substitution
                 , Generic.Unification.Unification
                 , Generic.Unification.Tutorial
                 , Generic.Unification.Prolog
                 , Generic.Unification.Hinze
  other-modules:   Generic.Unification.Term.Internal
  -- other-extensions:
  build-depends:       base
                     , pretty-show
                     , generics-sop
                     , show-combinators
                     , mtl
                     , containers
                     , typerep-map
                     , logict
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            doctest-driver.hs
  build-depends:      base >4 && <5, doctest, doctest-discover, unification-sop
  HS-Source-Dirs:     test
